--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,30 @@
-# version: '3.8'
+version: '3.8'
 
 services:
   app:
     build: .
-    command: ./.docker/start.sh
     container_name: mini-task-scheduler-app
     ports:
-      - 3002:3000
+      - "3002:3000"
     volumes:
       - .:/home/node/app
     depends_on:
-      - mini-task-scheduler-app-postgresql
+      - db
     environment:
-      - POSTGRES_HOST=localhost
-      - POSTGRES_DATABASE=root
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+      - DATABASE_URL=postgresql://postgres:password@postgres:5432/postgres
+      - PORT=3000
 
-  mini-task-scheduler-app-postgresql:
+  db:
     container_name: mini-task-scheduler-app-db
-    image: postgres:9.4
+    image: postgres:15-alpine
     environment:
-      - POSTGRES_HOST=localhost
-      - POSTGRES_DATABASE=root
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
     ports:
-      - "5432:5432" 
+      - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/mini-task-scheduler-app-postgresql/mini-task-scheduler-app
+      - postgres_data:/var/lib/postgresql/data
       - ./scripts:/docker-entrypoint-initdb.d
     command: ["postgres", "-c", "log_statement=all"]
 
